--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-    <link rel="stylesheet" href="../../static/libs/editormd/css/editormd.min.css">
-    <link rel="stylesheet" href="../../static/css/mstyle.css" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" href="../../static/libs/editormd/css/editormd.min.css" th:href="@{/libs/editormd/css/editormd.min.css}">
+    <link rel="stylesheet" href="../../static/css/mstyle.css" th:href="@{/css/mstyle.css}">
 </head>
 <body>
 
@@ -21,7 +21,7 @@
                 <div class="right menu menu-item m-mobile-hide">
                     <div class="ui dropdown item">
                         <div class="text">
-                            <img src="https://via.placeholder.com/100" alt="" class="ui avatar image">
+                            <img src="../../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
                             Ah-tao
                             <i class="dropdown icon"></i>
                         </div>
