--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:replace="_fragments :: head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <link rel="stylesheet" href="../static/libs/tocbot/tocbot.css">
-    <link rel="stylesheet" href="../static/css/mstyle.css" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" href="../static/css/mstyle.css">
 </head>
 <body>
 
     <!-- nav -->
-    <nav class="ui attached segment m-padded-tb-min">
+    <nav th:replace="_fragments :: nav(0)" class="ui attached segment m-padded-tb-min">
         <div class="ui container">
             <div class="ui secondary stackable menu">
                 <h2 class="ui header item">Blog</h2>
@@ -43,7 +43,7 @@
                     <div class="eleven wide column">
                         <div class="ui horizontal link list">
                             <div class="item">
-                                <img src="https://via.placeholder.com/100" alt="" class="ui avatar image">
+                                <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
                                 <div class="content"><a href="#" class="header">Ah-tao</a></div>
                             </div>
                             <div class="item">
@@ -200,7 +200,7 @@
 
 
     <!-- footer -->
-    <footer class="ui vertical segment m-padded-tb-m">
+    <footer th:replace="_fragments :: footer" class="ui vertical segment m-padded-tb-m">
         <div class="ui center aligned container">
             <div class="ui section divider"></div>
             <div class="ui divided stackable grid">
@@ -235,7 +235,7 @@
     <!-- Script -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-    <script src="../static/libs/tocbot/tocbot.min.js"></script>
+    <script src="../static/libs/tocbot/tocbot.min.js" th:src="@{/libs/tocbot/tocbot.min.js}"></script>
 
     <script>
         tocbot.init({
