--- a/src/main/resources/templates/tag.html
+++ b/src/main/resources/templates/tag.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:replace="_fragments :: head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tag</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-    <link rel="stylesheet" href="../static/css/mstyle.css" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" href="../static/css/mstyle.css">
 </head>
 <body>
 
     <!-- nav -->
-    <nav class="ui attached segment m-padded-tb-min">
+    <nav th:replace="_fragments :: nav(3)" class="ui attached segment m-padded-tb-min">
         <div class="ui container">
             <div class="ui secondary stackable menu">
                 <h2 class="ui header item">Blog</h2>
@@ -65,7 +65,7 @@
                         <div class="eleven wide column">
                             <div class="ui horizontal link list">
                                 <div class="item">
-                                    <img src="https://via.placeholder.com/100" alt="" class="ui avatar image">
+                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
                                     <div class="content"><a href="#" class="header">Ah-tao</a></div>
                                 </div>
                                 <div class="item">
@@ -85,7 +85,7 @@
                         <div class="eleven wide column">
                             <div class="ui horizontal link list">
                                 <div class="item">
-                                    <img src="https://via.placeholder.com/100" alt="" class="ui avatar image">
+                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
                                     <div class="content"><a href="#" class="header">Ah-tao</a></div>
                                 </div>
                                 <div class="item">
@@ -105,7 +105,7 @@
                         <div class="eleven wide column">
                             <div class="ui horizontal link list">
                                 <div class="item">
-                                    <img src="https://via.placeholder.com/100" alt="" class="ui avatar image">
+                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
                                     <div class="content"><a href="#" class="header">Ah-tao</a></div>
                                 </div>
                                 <div class="item">
@@ -125,7 +125,7 @@
                         <div class="eleven wide column">
                             <div class="ui horizontal link list">
                                 <div class="item">
-                                    <img src="https://via.placeholder.com/100" alt="" class="ui avatar image">
+                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
                                     <div class="content"><a href="#" class="header">Ah-tao</a></div>
                                 </div>
                                 <div class="item">
@@ -145,7 +145,7 @@
                         <div class="eleven wide column">
                             <div class="ui horizontal link list">
                                 <div class="item">
-                                    <img src="https://via.placeholder.com/100" alt="" class="ui avatar image">
+                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
                                     <div class="content"><a href="#" class="header">Ah-tao</a></div>
                                 </div>
                                 <div class="item">
@@ -165,7 +165,7 @@
                         <div class="eleven wide column">
                             <div class="ui horizontal link list">
                                 <div class="item">
-                                    <img src="https://via.placeholder.com/100" alt="" class="ui avatar image">
+                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
                                     <div class="content"><a href="#" class="header">Ah-tao</a></div>
                                 </div>
                                 <div class="item">
@@ -178,6 +178,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
             <!-- Bottom -->
             <div class="ui bottom attached segment">
@@ -197,7 +198,7 @@
 
 
     <!-- footer -->
-    <footer class="ui vertical segment m-padded-tb-m">
+    <footer th:replace="_fragments :: footer" class="ui vertical segment m-padded-tb-m">
         <div class="ui center aligned container">
             <div class="ui section divider"></div>
             <div class="ui divided stackable grid">
