--- a/src/main/resources/templates/topic.html
+++ b/src/main/resources/templates/topic.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:replace="_fragments :: head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Topic</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-    <link rel="stylesheet" href="../static/css/mstyle.css" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" href="../static/css/mstyle.css">
 </head>
 <body>
 
     <!-- nav -->
-    <nav class="ui attached segment m-padded-tb-min">
+    <nav th:replace="_fragments :: nav(2)" class="ui attached segment m-padded-tb-min">
         <div class="ui container">
             <div class="ui secondary stackable menu">
                 <h2 class="ui header item">Blog</h2>
@@ -87,7 +87,7 @@
                         <div class="eleven wide column">
                             <div class="ui horizontal link list">
                                 <div class="item">
-                                    <img src="https://via.placeholder.com/100" alt="" class="ui avatar image">
+                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
                                     <div class="content"><a href="#" class="header">Ah-tao</a></div>
                                 </div>
                                 <div class="item">
@@ -107,7 +107,7 @@
                         <div class="eleven wide column">
                             <div class="ui horizontal link list">
                                 <div class="item">
-                                    <img src="https://via.placeholder.com/100" alt="" class="ui avatar image">
+                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
                                     <div class="content"><a href="#" class="header">Ah-tao</a></div>
                                 </div>
                                 <div class="item">
@@ -127,7 +127,7 @@
                         <div class="eleven wide column">
                             <div class="ui horizontal link list">
                                 <div class="item">
-                                    <img src="https://via.placeholder.com/100" alt="" class="ui avatar image">
+                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
                                     <div class="content"><a href="#" class="header">Ah-tao</a></div>
                                 </div>
                                 <div class="item">
@@ -147,7 +147,7 @@
                         <div class="eleven wide column">
                             <div class="ui horizontal link list">
                                 <div class="item">
-                                    <img src="https://via.placeholder.com/100" alt="" class="ui avatar image">
+                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
                                     <div class="content"><a href="#" class="header">Ah-tao</a></div>
                                 </div>
                                 <div class="item">
@@ -167,7 +167,7 @@
                         <div class="eleven wide column">
                             <div class="ui horizontal link list">
                                 <div class="item">
-                                    <img src="https://via.placeholder.com/100" alt="" class="ui avatar image">
+                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
                                     <div class="content"><a href="#" class="header">Ah-tao</a></div>
                                 </div>
                                 <div class="item">
@@ -187,7 +187,7 @@
                         <div class="eleven wide column">
                             <div class="ui horizontal link list">
                                 <div class="item">
-                                    <img src="https://via.placeholder.com/100" alt="" class="ui avatar image">
+                                    <img src="../static/images/Tao.jpg" th:src="@{/images/Tao.jpg}" alt="" class="ui avatar image">
                                     <div class="content"><a href="#" class="header">Ah-tao</a></div>
                                 </div>
                                 <div class="item">
@@ -213,13 +213,12 @@
                 </div>
             </div>
 
-
         </div>
     </div>
 
 
     <!-- footer -->
-    <footer class="ui vertical segment m-padded-tb-m">
+    <footer th:replace="_fragments :: footer" class="ui vertical segment m-padded-tb-m">
         <div class="ui center aligned container">
             <div class="ui section divider"></div>
             <div class="ui divided stackable grid">
