--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
+<head th:replace="admin/_fragments :: head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit</title>
@@ -11,7 +11,7 @@
 <body>
 
     <!-- nav -->
-    <nav class="ui attached segment m-padded-tb-min">
+    <nav th:replace="admin/_fragments :: nav" class="ui attached segment m-padded-tb-min">
         <div class="ui container">
             <div class="ui secondary stackable menu">
                 <h2 class="ui header item">Blog</h2>
@@ -148,16 +148,16 @@
     <!-- Script -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-    <script src="../../static/libs/editormd/editormd.min.js"></script>
+    <script src="../../static/libs/editormd/editormd.min.js" th:src="@{/libs/editormd/editormd.min.js}"></script>
 
     <script>
         $('.menu.toggle').click(function () {
             $('.menu-item').toggleClass('m-mobile-hide');
-        })
+        });
 
         $('.ui.dropdown').dropdown({
             on: 'hover'
-        })
+        });
 
         $('.ui.form').form({
             fields: {
@@ -169,8 +169,7 @@
                     }]
                 }
             }
-        })
-
+        });
 
         // initialize markdown editor
         var contentEditor;
