--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -19,12 +19,12 @@
                 <h2 class="ui image header">Login</h2>
                 <form class="ui large form" method="post" action="#" th:action="@{/admin/login}">
                     <div class="ui segment">
-                        <div class="field">
+                        <div class=" field">
                             <div class="ui input">
                                 <input type="text" name="username" placeholder="Username">
                             </div>
                         </div>
-                        <div class="field">
+                        <div class=" field">
                             <div class="ui input">
                                 <input type="password" name="password" placeholder="Password">
                             </div>
@@ -32,6 +32,7 @@
                         <button class="ui fluid large submit button">Login</button>
                     </div>
 
+                    <!-- error message is hidden by default. modify css to show the error message -->
                     <div class="ui mini error message"></div>
                     <div class="ui mini negative message" th:unless="${#strings.isEmpty(message)}" th:text="${message}">Username and Password are incorrect</div>
 
@@ -47,24 +48,28 @@
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 
 <script>
-    $('.ui.form').form({
-        fields : {
-            username : {
-                identifier: 'username',
-                rules: [{
-                    type : 'empty',
-                    prompt: 'Please input username'
-                }]
-            },
-            password : {
-                identifier: 'password',
-                rules: [{
-                    type : 'empty',
-                    prompt: 'Please input password'
-                }]
+
+    $(document).ready(function() {
+        $('.ui.form').form({
+            fields : {
+                username : {
+                    identifier: 'username',
+                    rules: [{
+                        type : 'empty',
+                        prompt: 'Please enter username'
+                    }]
+                },
+                password : {
+                    identifier: 'password',
+                    rules: [{
+                        type : 'empty',
+                        prompt: 'Please enter password'
+                    }]
+                }
             }
-        }
+        });
     });
+
 </script>
 
 </body>
