--- a/src/main/resources/templates/admin/post_edit.html
+++ b/src/main/resources/templates/admin/post_edit.html
@@ -3,7 +3,7 @@
 <head th:replace="admin/_fragments :: head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post Edit</title>
+    <title>Post Manage</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <link rel="stylesheet" href="../../static/libs/editormd/css/editormd.min.css" th:href="@{/libs/editormd/css/editormd.min.css}">
     <link rel="stylesheet" href="../../static/css/mstyle.css" th:href="@{/css/mstyle.css}">
@@ -40,8 +40,8 @@
     <div class="ui attached pointing menu">
         <div class="ui container">
             <div class="right menu">
-                <a href="#" class="active item">Edit</a>
-                <a href="#" class="item">List</a>
+                <a href="#" th:href="@{/admin/posts/create}" class="active item">Create/Edit</a>
+                <a href="#" th:href="@{/admin/posts}" class="item">List</a>
             </div>
         </div>
     </div>
